--- a/UniversityData/UniversityData.Client/Views/UniversityPropertyWindow.axaml
+++ b/UniversityData/UniversityData.Client/Views/UniversityPropertyWindow.axaml
@@ -3,13 +3,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="UniversityData.Client.Views.ConstructionPropertyWindow"
+        x:Class="UniversityData.Client.Views.UniversityPropertyWindow"
         xmlns:vm="using:UniversityData.Client.ViewModels"
-		Title="Редактирование собственности зданий университета"
+		Title="Редактирование собственности университета"
 		MaxWidth="500"
 		SizeToContent="Height">
 	<Design.DataContext>
-		<vm:ConstructionPropertyViewModel/>
+		<vm:UniversityPropertyViewModel/>
 	</Design.DataContext>
 
 	<Window.Styles>
@@ -17,7 +17,7 @@
 	</Window.Styles>
 	<Grid Classes ="MainGrid" RowDefinitions = "Auto, *" ColumnDefinitions="Auto, *">
 		<Label Grid.Row="0" VerticalAlignment="Center">Наименование собственности</Label>
-		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding NameConstructionProperty}"/>
+		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding NameUniversityProperty}"/>
 		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
