--- a/UniversityData/UniversityData.Client/Views/MainWindow.axaml
+++ b/UniversityData/UniversityData.Client/Views/MainWindow.axaml
@@ -22,7 +22,7 @@
 			<TabItem Header="Собственности зданий" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddConstructionPropertyCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -39,7 +39,7 @@
 			<TabItem Header="Собственности университетов" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddUniversityPropertyCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -56,7 +56,7 @@
 			<TabItem Header="Кафедры" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddDepartmentCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -75,7 +75,7 @@
 			<TabItem Header="Факультеты" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddFacultyCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -94,7 +94,7 @@
 			<TabItem Header="Ректоры" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddRectorCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -116,7 +116,7 @@
 			<TabItem Header="Специальности" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddSpecialtyCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -134,7 +134,7 @@
 			<TabItem Header="Связи специальностей и университетов" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddSpecialtyTableNodeCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
@@ -153,7 +153,7 @@
 			<TabItem Header="Университеты" HorizontalAlignment="Center">
 				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
-						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton" Command="{Binding OnAddUniversityCommand}">Добавить</Button>
 						<Button Classes ="ToolButton">Изменить</Button>
 						<Button Classes ="ToolButton">Удалить</Button>
 					</StackPanel>
